--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "react-paginate": "^8.1.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^4.4.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
@@ -54,6 +57,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.10",
+    "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
